[metadata]
name = FI Book
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = attr: FI_Book.__version__
description = Classes to model a Chilean Fixed Income Order Book.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/FI_Book
license_files = LICENSE
keywords = outlook, outlook wrapper
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    = src
exclude =
    tests
packages=find:
python_requires = >=3.11

[options.packages.find]
where=src